--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>Jade Delight</title>
 	<style>
 		body {background-color: #37BE8F}
+		h1 {font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace"; color: #FFFFFF; text-decoration: underline; text-align: center}
+		p {font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace"; color: #000000}
 	</style>
 </head>
 
